# vesta-claude

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_board.py  test_claude_client.py  test_config.py  test_vestaboard_client.py
vesta_claude/: board.py  claude_client.py  config.py  main.py  prompt.py  vestaboard_client.py
