[tool.poetry]
name = "vesta-claude"
version = "0.1.0"
description = "Populate a Vestaboard with AI-generated content via Claude"
authors = []
readme = "README.md"
packages = [{include = "vesta_claude"}]

[tool.poetry.dependencies]
python = "^3.13"
anthropic = "^0.49.0"
boto3 = "^1.35"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.0"
black = "^25.0"
isort = "^5.13"
mypy = "^1.13"
pylint = "^3.3"
bandit = {extras = ["toml"], version = "^1.8"}
pre-commit = "^4.0"

[tool.poetry.scripts]
vesta-claude = "vesta_claude.main:main"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "R0903", "W0718"]

[tool.pylint.format]
max-line-length = 88

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=vesta_claude --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"
